# O-RAN

./: BuildMessage.h  README.md
E2 Termination/E2/: ANY.c  BOOLEAN.c  BOOLEAN.h  INTEGER.c  Makefile  Makefile.am  Makefile.am.libasncodec  Makefile.in  OCTET_STRING.c  OPEN_TYPE.c  PrintableString.c  PrintableString.h  aclocal.m4  asn_application.c  asn_codecs_prim.c  asn_constant.h  asn_internal.h  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libasncodec.la  libasncodec_la-ANY.lo  libasncodec_la-BIT_STRING.lo  libasncodec_la-BOOLEAN.lo  libasncodec_la-Cause.lo  libasncodec_la-CauseMisc.lo  libasncodec_la-CauseProtocol.lo  libasncodec_la-CauseRIC.lo  libasncodec_la-CauseRICservice.lo  libasncodec_la-CauseTransport.lo  libasncodec_la-Criticality.lo  libasncodec_la-CriticalityDiagnostics-IE-Item.lo  libasncodec_la-CriticalityDiagnostics-IE-List.lo  libasncodec_la-CriticalityDiagnostics.lo  libasncodec_la-E2AP-PDU.lo  libasncodec_la-E2SM-gNB-NRT-ActionDefinition-Format1.lo  libasncodec_la-E2SM-gNB-NRT-ActionDefinition.lo  (+163 more)
E2 Termination/E2/.deps/: libasncodec_la-ANY.Plo  libasncodec_la-BIT_STRING.Plo  libasncodec_la-BOOLEAN.Plo  libasncodec_la-Cause.Plo  libasncodec_la-CauseMisc.Plo  libasncodec_la-CauseProtocol.Plo  libasncodec_la-CauseRIC.Plo  libasncodec_la-CauseRICservice.Plo  libasncodec_la-CauseTransport.Plo  libasncodec_la-Criticality.Plo  libasncodec_la-CriticalityDiagnostics-IE-Item.Plo  libasncodec_la-CriticalityDiagnostics-IE-List.Plo  libasncodec_la-CriticalityDiagnostics.Plo  libasncodec_la-E2AP-PDU.Plo  libasncodec_la-ECGI.Plo  (+157 more)
(+41 files in other folders)
